# MS_0_Team_19_Code

MS_02_Team_19_Code/Project01/: CMakeLists.txt  dc.c  dc.h  ir_sensor.c  ir_sensor.h  lcd.c  lcd.h  led.c  led.h  main.c  servo.c  servo.h  std_types.h  tcs3200.c  tcs3200.h  ultrasonic.c  ultrasonic.h
